--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,21 +1,21 @@
 name: linting, testing, building
-on: 
+on:
   push:
     branches: [main]
   pull_request:
-    branches: [main] 
+    branches: [main]
 jobs:
   pipeline:
     runs-on: ubuntu-latest
     strategy:
       matrix:
         node-version: [ 20.x ]
-    
+
     steps:
       - name: Staring Node.js ${{ matrix.node-version }}
         uses: actions/checkout@v2
       - uses: actions/setup-node@v1
-        with: 
+        with:
           node-version: ${{ matrix.node-version }}
       - name: install modules
         run: npm install
@@ -27,3 +27,7 @@ jobs:
         run: npm run lint:scss
       - name: unit testing
         run: npm run test:unit
+      - name: build storybook
+        run: npm run storybook:build
+      - name: screenshot testing
+        run: npm run test:ui:ci
