--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,8 +26,11 @@ jobs:
       - name: linting scss
         run: npm run lint:scss
       - name: unit testing
+        if: always()
         run: npm run test:unit
       - name: build storybook
+        if: always()
         run: npm run storybook:build
       - name: screenshot testing
+        if: always()
         run: npm run test:ui:ci
